# mercury-engine-data-structures

./: .gitignore  .pre-commit-config.yaml  README.md  out.txt  pyproject.toml  requirements.txt  saveedit.py  setup.cfg  setup.py
.github/workflows/: dependency.yml  python.yml  with-data.yml
mercury_engine_data_structures/: cli.py  common_types.py  crc.py  dread_data.py  dread_types.json  dread_types.py  dread_types_new.json  file_tree_editor.py  game_check.py  hashed_names.py  object.py  pkg_editor.py  pointer_set.py  property_names.json  resource_names.json  resource_names.py  sr_resource_names.json  type_lib.py
mercury_engine_data_structures/__pyinstaller/: hook-mercury_engine_data_structures.py
mercury_engine_data_structures/construct_extensions/: alignment.py  enum.py  misc.py
mercury_engine_data_structures/formats/: __init__.py  base_resource.py  bcmdl.py  bctex.py  bldef.py  bmbls.py  bmmap.py  bmmdef.py  bmsad.py  bmsas.py  bmscc.py  bmsld.py  bmslgroup.py  bmslink.py  bmsnav.py  bmssd.py  bmssv.py  bmtre.py  brem.py  bres.py  brev.py  brfld.py  brsa.py  bsmat.py  game_model_root.py  gui_files.py  pkg.py  property_enum.py  standard_format.py  toc.py  txt.py
src/mercury_engine_data_structures/: __main__.py  _dread_data_construct.py  base_resource.py  cli.py  common_types.py  crc.py  dread_data.py  dread_property_names.json  dread_resource_names.json  dread_types.json  file_tree_editor.py  game_check.py  lzss.py  object.py  pointer_set.py  romfs.py  romfs_wrapper.py  samus_returns_data.json  samus_returns_data.py  samus_returns_types.json  sr_property_names.json  sr_resource_names.json  type_lib.py  type_lib_instances.py  version_validation.py
src/mercury_engine_data_structures/__pyinstaller/: __init__.py  hook-mercury_engine_data_structures.py
src/mercury_engine_data_structures/adapters/: enum_adapter.py  flagsenum_adapter.py  offset.py
src/mercury_engine_data_structures/construct_extensions/: __init__.py  alignment.py  enum.py  function_complex.py  json.py  limited_struct.py  misc.py  strings.py
src/mercury_engine_data_structures/exporters/: dds.py  raw_texture.py
src/mercury_engine_data_structures/formats/: Rom3ds.py  __init__.py  audio_common.py  bapd.py  base_resource.py  bcmdl.py  bcskla.py  bctex.py  bfont.py  bfstm.py  bgsnds.py  bldef.py  blsnd.py  blut.py  bmbls.py  bmdefs.py  bmmap.py  bmmdef.py  bmsad.py  bmsas.py  bmsat.py  bmsbk.py  bmscc.py  bmscp.py  bmscu.py  bmsem.py  bmses.py  bmsev.py  bmsld.py  bmslgroup.py  bmslink.py  bmsmd.py  bmsmsd.py  bmsnav.py  bmssa.py  bmssd.py  bmsstoc.py  bmtre.py  bmtun.py  bnvib.py  (+21 more)
test/: conftest.py  test_common_types.py  test_lib.py  test_object.py  test_pointer_set.py
test/formats/: test-bmsnav.py  test_bcmdl.py  test_bctex.py  test_bmsad.py  test_bmsas.py  test_bmscu.py  test_bmssv.py  test_brfld.py  test_bsmat.py  test_gui.py  test_minimap.py  test_pkg.py  text_txt.py
tests/: conftest.py  test_common_types.py  test_dds_export.py  test_file_tree_editor.py  test_lib.py  test_object.py  test_pointer_set.py  test_type_lib.py  test_version_validation.py
tests/formats/: test_bapd.py  test_bcmdl.py  test_bcskla.py  test_bctex.py  test_bfont.py  test_bfstm.py  test_bgsnds.py  test_blsnd.py  test_blut.py  test_bmbls.py  test_bmdefs.py  test_bmmap.py  test_bmmdef.py  test_bmsad.py  test_bmsas.py  test_bmsat.py  test_bmsbk.py  test_bmscu.py  test_bmsem.py  test_bmses.py  test_bmsev.py  test_bmsld.py  test_bmsmd.py  test_bmsmsd.py  test_bmsnav.py  test_bmssa.py  test_bmssd.py  test_bmsstoc.py  test_bmtre.py  test_bmtun.py  test_bnvib.py  test_bpsi.py  test_bptdat.py  test_brem.py  test_bres.py  test_brev.py  test_brfld.py  test_brsa.py  test_brspd.py  test_bsmat.py  (+11 more)
tools/: all_types.json  create_class_definitions.py  create_sr_file_names.py  extract_pkg.py  filter_file_names.py  ghidra_export.py  list_known_paths_in_toc.py  plot_simple_map.py  sr_export_rdv_database.py  update_hashes_with_field_names.py
