[metadata]
name = mercury-engine-data-structures
description = Construct file definitions for the Mercury Engine, the in-house game engine from MercurySteam
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Rust

[options]
packages = find:
install_requires =
    construct>=2.10.0

include_package_data = True
zip_safe = False
python_requires = >=3.8

[options.packages.find]
exclude =
    test

